package com.pluralsight.deliciousdeli.controller;

import com.pluralsight.deliciousdeli.model.UserInterface;

public class DELIcousMain {
    public static void main(String[] args) {
        UserInterface ui = new UserInterface();
        ui.homeScreen();

    }
}
