package com.pluralsight.deliciousdeli.enums;

public enum SandWichSize {

    // Enum constants representing different sandwich sizes with base price
    FOUR,
    EIGHT,
    TWELVE;
}
